--- a/scracth.html
+++ b/scracth.html
@@ -253,7 +253,7 @@
                     <th></th>                 
                     <td>MURILO</td>
                     <td>6ºC</td>
-                    <td><a href="" target="_blank">Emocionante história</a></td>
+                    <td><a href="" target="_blank"></a></td>
              </tr>
                  <tr>
                     <td>RAFAELA</td>
@@ -324,7 +324,7 @@
                   <tr>
                     <td>MURILLO</td>
                     <td>6ºB</td>
-                    <td><a href="https://scratch.mit.edu/projects/863539127/fullscreen/" target="_blank">Golaço</a></td>   
+                    <td><a href="https://scratch.mit.edu/projects/864590226/fullscreen/" target="_blank">Exército Machista</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
