--- a/python.html
+++ b/python.html
@@ -89,7 +89,7 @@
                 <tr>
                     <td>LEILA</td>
                     <td>9ºB</td>
-                    <td><a href="https://www.youtube.com/watch?v=gDTsaTr4nI4" target="_blank">Música"Desconstruindo Amélia"</a></td>   
+                    <td><a href="https://multiversonoticias.com.br/dicas-de-bem-estar-para-cada-signo/" target="_blank">Saúde e o Zodiaco</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
@@ -107,7 +107,7 @@
                     <th></th>                 
                     <td>ANDRÉ</td>
                     <td>9ºC</td>
-                    <td><a href="https://multiversonoticias.com.br/dicas-de-bem-estar-para-cada-signo/" target="_blank">Saúde e o Zodiaco</a></td>
+                    <td><a href="https://www.cemigsaude.org.br/site/pagina/detalhe/19274#:~:text=Tenha%20uma%20dieta%20rica%20em,de%20sal%2C%20a%C3%A7%C3%BAcar%20e%20gordura.&text=Pratique%20exerc%C3%ADcios%20f%C3%ADsicos%20regularmente.&text=Cuide%20da%20sua%20sa%C3%BAde%20mental.&text=Evite%20bebidas%20alc%C3%B3olicas%20e%20o%20fumo." target="_blank">Saúde e Bem-Estar</a></td>
                 </tr>
                 <tr>
                     <td>JOSÉ</td>
