--- a/scracth.html
+++ b/scracth.html
@@ -379,7 +379,7 @@
                     
           </tr>
                     <tr>
-                    <td>>KESIA</td>
+                    <td>KESIA</td>
                     <td>6ºC</td>
                     <td><a href="https://scratch.mit.edu/projects/864785108/fullscreen/" target="_blank"></a>Mundo machista</td>   
                     <th></th> 
