--- a/python.html
+++ b/python.html
@@ -151,12 +151,12 @@
                     <th></th>                 
                     <td> VITÓRIA</td>
                     <td>8ºA</td>
-                    <td><a href="" target="_blank"></a></td>
+                    <td><a href="https://youtu.be/LMOynUxsGHo" target="_blank"></a>Explicando o ODS3</td>
                 </tr>
                 <tr>
                  <td>LUIZ AUGUSTO</td>
                     <td>8ºC</td>
-                    <td><a href="" target="_blank">QUIZ do Luiz Augusto</a></td>   
+                    <td><a href="https://trinket.io/python3/d64a085bb1" target="_blank">QUIZ do Luiz Augusto</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
@@ -167,7 +167,7 @@
              <tr>
                  <td>LUIZ GABRIEL</td>
                     <td>8ºC</td>
-                    <td><a href="" target="_blank">QUIZ do Luiz Gabriel</a></td>   
+                    <td><a href="https://trinket.io/python3/499f7a6804" target="_blank">QUIZ do Gabriel</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
@@ -189,7 +189,7 @@
              <tr>
                  <td>FERNANDO</td>
                     <td>8ºC</td>
-                    <td><a href="" target="_blank">QUIZ do Fernando</a></td>   
+                    <td><a href="https://trinket.io/python3/486dc2a1e4" target="_blank">Perguntas do Balacobaco</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
