--- a/python.html
+++ b/python.html
@@ -162,7 +162,7 @@
                     <th></th>                 
                     <td> LUIZ ROBERTO</td>
                     <td>8ºA</td>
-                    <td><a href="" target="_blank">QUIZ do Luiz Roberto </a></td>
+                    <td><a href="https://trinket.io/python3/9088e6c288" target="_blank">Quantos litros de água você deve beber por dia? </a></td>
              </tr>
              <tr>
                  <td>LUIZ GABRIEL</td>
@@ -173,7 +173,7 @@
                     <th></th>                 
                     <td> VICTOR</td>
                     <td>8ºC</td>
-                    <td><a href="" target="_blank">QUIZ do Victor </a></td>
+                    <td><a href="https://trinket.io/python3/41e6941d37" target="_blank">Fácil, só 4 perguntas! </a></td>
              </tr>
              <tr>
                  <td>JOÃO</td>
@@ -195,7 +195,7 @@
                     <th></th>                 
                     <td> GABRIEL</td>
                     <td>8ºA</td>
-                    <td><a href="" target="_blank">QUIZ do Gabriel </a></td>
+                    <td><a href="https://trinket.io/python3/e2544cdd0b" target="_blank">Bem rápido </a></td>
              </tr>
              <tr>
                     <td>ANA JULIA </td>
