--- a/python.html
+++ b/python.html
@@ -134,7 +134,7 @@
      <tr>
                     <td>WILLIAN</td>
                     <td>9ºB</td>
-                    <td><a href="https://trinket.io/python3/3b82cb7001"target="_blank">Letra da música"Desigualdade de gênero"</a></td>   
+                    <td><a href=""target="_blank"></a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
