--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="python.html"><font color=green>ODS3</font></a>
         <a href="scracth.html"><font color=orange>SCRACTH</font></a>
         <a href="python5.html"><font color=red>ODS5</font></a>
-        <a href="nuvem.html"><font color=blue>Opinião dos alunos</font></a>
+        <a href="nuvem.html"><font color=blue>Fala dos alunos</font></a>
         
 
 
