--- a/scracth.html
+++ b/scracth.html
@@ -291,7 +291,7 @@
                  <tr>
                     <td>IZABELY</td>
                     <td>7ºB</td>
-                    <td><a href="" target="_blank">HISTÓRIA da Izabely</a></td>   
+                    <td><a href="https://scratch.mit.edu/projects/865076955/fullscreen/" target="_blank">HISTÓRIA da Izabely</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
