--- a/scracth.html
+++ b/scracth.html
@@ -143,7 +143,7 @@
                     <th></th>                 
                     <td>JULIA LOURDES</td>
                     <td>9ºC</td>
-                    <td><a href="" target="_blank">HISTÓRIA da Júlia </a></td>
+                    <td><a href="https://scratch.mit.edu/projects/865241571/fullscreen/" target="_blank">Vamos acabar com isso</a></td>
                 </tr>
      <tr>
                     <td>LARA</td>
