--- a/scracth.html
+++ b/scracth.html
@@ -126,7 +126,7 @@
                 <tr>
                     <td>JULIA GARCIA</td>
                     <td>7ºA</td>
-                    <td><a href="" target="_blank">HISTÓRIA da Julia</a></td>   
+                    <td><a href="https://scratch.mit.edu/projects/865296954/fullscreen/" target="_blank">Quermos igualdade!</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
