--- a/scracth.html
+++ b/scracth.html
@@ -231,7 +231,7 @@
                     <th></th>                 
                     <td>KAUAN </td>
                     <td>6ºA</td>
-                    <td><a href="https://scratch.mit.edu/projects/861689262/fullscreen/"target="_blank">Fubola</a></td>
+                    <td><a href=""target="_blank"></a></td>
           </tr>
                 <tr>
                     <td>LUIS GUSTAVO</td>
