--- a/python.html
+++ b/python.html
@@ -64,10 +64,10 @@
             <img src="fotos/9_segunda.jpg" alt="9º" style="width: 33,33%">
         </div>
         <div class="coluna">
-            <img src="fotos/9_2.jpg" alt="9º" style="width: 33,33%">
+            <img src="fotos/ODS3.png" alt="ODS3" style="width: 33,33%">
         </div>
         <div class="coluna">
-            <img src="fotos/6º1.jpg" alt="6º" style="width: 33,33%;">
+            <img src="fotos/9_2.jpg" alt="6º" style="width: 33,33%;">
         </div>
 
     </div>
