--- a/python.html
+++ b/python.html
@@ -64,7 +64,7 @@
             <img src="fotos/9_segunda.jpg" alt="9º" style="width: 33,33%">
         </div>
         <div class="coluna">
-            <img src="fotos/ODS3.png" alt="ODS3" style="width: 33,33%">
+            <img src="fotos/ods3.png" alt="ODS3" style="width: 33,33%">
         </div>
         <div class="coluna">
             <img src="fotos/9_2.jpg" alt="9º" style="width: 33,33%;">
