--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 </head>
 <body>
-    <header><h1> AMOSTRA UME AVELINO DA PAZ VIEIRA 2023</h1><header>
+    <header><h1> MOSTRA UME AVELINO DA PAZ VIEIRA 2023</h1><header>
         <header><h2> Sejam bem-vindos </h2><header>
         <header><h2> Nossos alunos escolheram falar sobre os Objetivos de Desenvolvimento Sustentável(ODS) 3 e 5  </h2><header>
         
