--- a/python5.html
+++ b/python5.html
@@ -92,25 +92,15 @@
                 <tr>
                    <td>FELIPE</td>
                     <td>9ºA</td>
-                    <td><a href="">QUIZ do Felipe</a></td>   
+                    <td><a href="https://www.youtube.com/watch?v=cFs1W_04AC4&t=65s" target="_blank">"Brincadeira de menina"</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>KEROLYN </td>
                     <td>9ºB</td>
-                    <td><a href="https://trinket.io/python3/8d2c7adf85">QUIZ da Kerolyn </a></td>
+                    <td><a href="https://trinket.io/python3/8d2c7adf85" target="_blank">QUIZ da Kerolyn </a></td>
                </tr>
-                <tr>
-                     <td>BRENDA</td>
-                    <td>9ºB</td>
-                    <td><a href="">QUIZ da Brenda</a></td>   
-                    <th></th> 
-                    <th></th> 
-                    <th></th>                 
-                    <td>VICTOR DA ROCHA</td>
-                    <td>9ºB</td>
-                    <td><a href="">QUIZ do Victor </a></td>
-                </tr>
+                
                 <tr>
                      <td>EDUARDO</td>
                     <td>9ºB</td>
