--- a/python.html
+++ b/python.html
@@ -93,8 +93,8 @@
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td>LUCAS </td>
-                    <td>9ºB</td>
+                    <td>JOÃO</td>
+                    <td>8ºC</td>
                     <td><a href="https://eigierdiagnosticos.com.br/blog/dicas-de-saude-bem-estar/" target="_blank">18 poderosas dicas de saúde </a></td>
             
                 </tr>
