--- a/python.html
+++ b/python.html
@@ -123,7 +123,7 @@
                 <tr>
                     <td>HADASSA</td>
                     <td>9ºB</td>
-                    <td><a href="https://www.youtube.com/watch?v=LEwaHFN-D6Q"target="_blank">Saúde no trabalho</a></td>   
+                    <td><a href="https://www.youtube.com/watch?v=LEwaHFN-D6Q"target="_blank">Vídeo sobre a saúde no trabalho</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
