--- a/python.html
+++ b/python.html
@@ -140,7 +140,7 @@
                     <th></th>                 
                     <td>YSLLEN</td>
                     <td>9ºC</td>
-                    <td><a href="https://youtu.be/GoFtn-JDd2I"target="_blank">Entendendo a ODS3</a></td>
+                    <td><a href="https://youtu.be/GoFtn-JDd2I"target="_blank">Vídeo:Entendendo a ODS3</a></td>
                 </tr>
      <tr>
                     <td>ROBERTO</td>
