--- a/python.html
+++ b/python.html
@@ -151,7 +151,7 @@
                     <th></th>                 
                     <td> VITÓRIA</td>
                     <td>8ºA</td>
-                    <td><a href="https://youtu.be/LMOynUxsGHo" target="_blank">Explicando o ODS3</a></td>
+                    <td><a href="https://youtu.be/LMOynUxsGHo" target="_blank">Vídeo:Explicando o ODS3</a></td>
                 </tr>
                 <tr>
                  <td>LUIZ AUGUSTO</td>
