--- a/scracth.html
+++ b/scracth.html
@@ -279,9 +279,9 @@
                     
           </tr>
                     <tr>
-                    <td></td>
-                    <td></td>
-                    <td><a href="" target="_blank"></a></td>   
+                    <td>JULIA LOURDES</td>
+                    <td>7ºA</td>
+                    <td><a href="https://scratch.mit.edu/projects/865477836/fullscreen/" target="_blank">Jantar</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
