--- a/scracth.html
+++ b/scracth.html
@@ -102,15 +102,15 @@
                 </tr>
                 
                 <tr>
-                    <td>JOSÉ/PEDRO</td>
+                    <td>JOSÉ</td>
                     <td>7ºC</td>
-                    <td><a href="https://scratch.mit.edu/projects/865293936/fullscreen/" target="_blank">História do José e do Pedro</a></td>   
+                    <td><a href="https://scratch.mit.edu/projects/865293936/fullscreen/" target="_blank">História do José</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>PEDRO </td>
                     <td>7ºC</td>
-                    <td><a href="https://scratch.mit.edu/projects/865293936/fullscreen/" target="_blank">Vamos dividir o serviço</a></td>
+                    <td><a href="https://scratch.mit.edu/projects/865953056/fullscreen/" target="_blank">Vamos parar com isso</a></td>
                 </tr>
                 <tr>
                     <td>JULIA GARCIA</td>
