--- a/scracth.html
+++ b/scracth.html
@@ -146,7 +146,7 @@
                     <th></th>                 
                     <td>IZABELLA MARKILENE </td>
                     <td>6ºA</td>
-                    <td><a href=https://scratch.mit.edu/projects/823758308/fullscreen/" target="_blank">As mulheres não são empregadas</a></td>
+                    <td><a href="https://scratch.mit.edu/projects/823758308/fullscreen/" target="_blank">As mulheres não são empregadas</a></td>
              </tr>
              <tr>
                  <td>KAUANY</td>
