--- a/scracth.html
+++ b/scracth.html
@@ -157,7 +157,7 @@
                     <th></th>                 
                     <td>LUIZ VINICIUS</td>
                     <td>6ºA</td>
-                    <td><a href="https://scratch.mit.edu/projects/843233188/fullscreen/" target="_blank">GOLAÇO</a></td>
+                    <td><a href="https://scratch.mit.edu/projects/865470047/editor/" target="_blank">Salário ruim</a></td>
              </tr>
              
              <tr>
